--- a/Webpage/css/basic.css
+++ b/Webpage/css/basic.css
@@ -185,7 +185,7 @@ input[type=submit] {
     width: 85%;
 }
 
-.heading {
+.headingText {
     margin: auto;
     padding: 1px 0;
     text-align: left;
